--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-lliurex-pmb (0.20) bionic; urgency=medium
+
+  * Initial release for bionic
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Mon, 08 Oct 2018 11:25:34 +0200
+
 zero-lliurex-pmb (0.10) xenial; urgency=high
 
   * New banner art 
