--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-lliurex-pmb (0.23.2) bionic; urgency=medium
+
+  * Fix typo on docker
+
+ -- Raul Rodrigo Segura <raurodse@gmail.com>  Fri, 16 Apr 2021 11:18:32 +0200
+
 zero-lliurex-pmb (0.23.1) bionic; urgency=medium
 
   * Add mount resolv.conf
