--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-lliurex-pmb (0.34) focal; urgency=medium
+
+  * Added custom name in epi file
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Tue, 25 May 2021 17:11:40 +0200
+
 zero-lliurex-pmb (0.33) focal; urgency=medium
 
   * Initial release for focal
